--- a/JavaScript/27-Dars white loop/index.html
+++ b/JavaScript/27-Dars white loop/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- HAR DARS UCHUN FAQAT BU QATORNI O'ZGARTIRING -->
-    <title>27-dars: White loop</title>
+    <title>27-dars: While loop</title>
     <!-- MASALAN: 25-dars: Grid Layout -->
 
     <!-- Tailwind CSS CDN (Play CDN - tez ishlaydi) -->
@@ -28,10 +28,10 @@
     <!-- MARKUP - BU YERNI O'ZGARTIRASIZ -->
     <div class="container mx-auto px-4 py-12">
         <h1 class="text-4xl font-bold text-primary mb-8 text-center">
-            27-dars: JavaScript White loop
+            27-dars: JavaScript While loop
         </h1>
     </div>
-    <script src="./white.js"></script>
+    <script src="./while.js"></script>
 </body>
 
 </html>
